Changes for 4.0.5rc1

New features:

Bug fixes:
........S. [ZBX-15533] fixed cutting and trimming event tags and values (asitals)
.......P.. [ZBX-15442] fixed reporting idle time in datasender's process state information (asitals)
..F....... [ZBX-15424] fixed when multiselect doesn't trim values and recognizes untrimmed values as new ones (vasilijs)
..F....... [ZBX-14644] fixed maintenance time periods "start_date" field being reset to "1920" instead of DB default value when updating via edit form (Ivo)
.D........ [ZBX-15271] added link to documentation in all man pages (kalimulin)
A......... [ZBX-15422] fixed SQL errors when linked template have item prototype with equal key as host item (Sasha)
..F....... [ZBX-15456] fixed incorrect style property in Monitoring->Problems; removed unused id from filter form (agriscenko)

--------------------------------------------------------------------------------
Changes for 4.0.4

4.0.4rc3 was released as 4.0.4 without any changes

--------------------------------------------------------------------------------
Changes for 4.0.4rc3

Bug fixes:
..F....... [ZBX-15412] fixed Name column overlaps the Application column in the Template view (vasilijs)

--------------------------------------------------------------------------------
Changes for 4.0.4rc2

Bug fixes:
..F....... [ZBXNEXT-4872] reverted SVG graph timeline changes to previous state (miks)

--------------------------------------------------------------------------------
Changes for 4.0.4rc1

New features:
..F....... [ZBXNEXT-4872] reworked SVG graph x-axis timeline (miks)
..F....... [ZBXNEXT-4873] implemented single dot datasets to be drawn as points in line vector graphs (miks)
...G...... [ZBX-14876] added a new optional parameter <regex_excl_dir> to items vfs.dir.size[] and vfs.dir.count[] (viktors)

Bug fixes:
..F....... [ZBX-15577] fixed restricted user access to the host name when calling host_screen (vasilijs)