@@ -421,19 +421,44 @@ char	*string_replace(const char *str, const char *sub_str1, const char *sub_str2
  ******************************************************************************/
 void	del_zeros(char *s)
 {
-	int     i;
+	int	trim = 0;
+	size_t	len = 0;
 
-	if(strchr(s,'.')!=NULL)
+	if (NULL == s)
 	{
-		for(i = (int)strlen(s)-1;;i--)
+		return;
+	}
+
+	while ('\0' != s[len])
+	{
+		if ('e' == s[len] || 'E' == s[len])
 		{
-			if(s[i]=='0')
+			/* don't touch numbers that are written in scientific notation */
+			return;
+		}
+
+		if ('.' == s[len])
+		{
+			/* number has decimal part */
+			trim = 1;
+		}
+
+		len++;
+	}
+
+	if (1 == trim)
+	{
+		size_t	i;
+
+		for (i = len - 1; ; i--)
+		{
+			if ('0' == s[i])
 			{
-				s[i]=0;
+				s[i] = '\0';
 			}
-			else if(s[i]=='.')
+			else if ('.' == s[i])
 			{
-				s[i]=0;
+				s[i] = '\0';
 				break;
 			}
 			else
